<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_user_profile"
        android:fontFamily="@string/font_family">
        <EditTextPreference
            android:title="@string/pref_user_name"
            android:summary="@string/pref_user_name_summary"
            android:fontFamily="@string/font_family"
            android:key="prefUsername"/>
        <EditTextPreference
           android:title="@string/pref_user_pass"
           android:summary="@string/pref_user_pass_summary"
           android:fontFamily="@string/font_family"
           android:key="prefUserPass"/>

        <EditTextPreference
            android:title="@string/pref_user_location"
            android:summary="@string/pref_user_location_summary"
            android:fontFamily="@string/font_family"
            android:key="prefUserLocation"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefAutoLogin"
            android:title="@string/pref_user_autologin"
            android:summary="@string/pref_user_autologin_summary"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting"
        android:fontFamily="@string/font_family">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report"
            >
        </CheckBoxPreference>

        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>

</PreferenceScreen>