<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ibm.techathon.elven.smartpool.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

<RelativeLayout
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="@dimen/app_image_width"
        android:layout_height="@dimen/app_image_height"
        android:id="@+id/imageView_app_icon"
        android:src="@drawable/ic_app_car_pool_96"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:fontFamily="@string/font_family"
        android:id="@+id/editText_login_email"
        android:layout_marginTop="@dimen/app_icon_margin_top"
        android:layout_below="@+id/imageView_app_icon"
        android:layout_alignRight="@+id/editText_login_password"
        android:layout_alignEnd="@+id/editText_login_password"
        android:layout_alignLeft="@+id/editText_login_password"
        android:layout_alignStart="@+id/editText_login_password" />

    <ImageView
        android:layout_width="@dimen/list_image_width"
        android:layout_height="@dimen/list_image_height"
        android:id="@+id/imageView_login_email"
        android:src="@drawable/ic_mail_96"
        android:layout_alignBottom="@+id/editText_login_email"
        android:layout_toLeftOf="@+id/editText_login_password"
        android:layout_toStartOf="@+id/editText_login_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:fontFamily="@string/font_family"
        android:id="@+id/editText_login_password"
        android:layout_toEndOf="@+id/imageView_login_password"
        android:layout_toRightOf="@+id/imageView_login_password"
        android:imeActionId="@+id/login"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/editText_login_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="@dimen/list_image_width"
        android:layout_height="@dimen/list_image_height"
        android:id="@+id/imageView_login_password"
        android:src="@drawable/ic_key_96"
        android:layout_alignBottom="@+id/editText_login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@string/font_family"
        android:id="@+id/button_login"
        android:layout_below="@+id/editText_login_password"
        android:layout_marginTop="@dimen/login_button_margin_top"
        android:layout_alignRight="@+id/editText_login_password"
        android:layout_alignEnd="@+id/editText_login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/button_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/single_line_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:fontFamily="@string/font_family_light"
        android:text="@string/register_message"
        android:id="@+id/textView_RegisterInformation"
        android:layout_alignTop="@+id/single_line_view"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/button_register"
        android:fontFamily="@string/font_family"
        android:layout_below="@+id/textView_RegisterInformation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
</LinearLayout>