<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibm.techathon.elven.smartpool.fragment.SearchTripsFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/card_line_background_color"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <TextView style="@style/ListHeaderLabel"
            android:text="@string/search_trips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_search_trips"
            android:fontFamily="@string/font_family"
            />

        <View android:id="@+id/divider_search_trips"
            style="@style/ListHeaderDividerLabel"
            android:layout_below="@+id/textView_search_trips"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card="http://schemas.android.com/apk/res-auto"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/linearLayout_start_location"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_search_trips_location"
                android:src="@drawable/ic_compass_64"
                android:layout_below="@+id/divider_search_trips"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                />

            <AutoCompleteTextView
                android:layout_width="231dp"
                android:layout_height="match_parent"
                android:id="@+id/editText_search_trips_location"
                android:hint= "@string/search_trips_start_location_hint"
                android:layout_marginLeft="@dimen/list_image_width"
                android:layout_toEndOf="@+id/imageView_search_trips_location"
                android:layout_alignTop="@+id/imageView_search_trips_location"
                android:layout_toRightOf="@+id/imageView_search_trips_location"
                android:layout_alignBottom="@+id/imageView_search_trips_location"
                />
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card="http://schemas.android.com/apk/res-auto"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/linearLayout_start_date_time"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_search_trips_time"
                android:src="@drawable/ic_time"
                android:layout_below="@+id/divider_search_trips"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/editText_search_trips_date"
                android:hint= "@string/search_trips_start_location_date"
                android:layout_marginLeft="@dimen/list_image_width"
                android:layout_toEndOf="@+id/imageView_search_trips_location"
                android:layout_alignTop="@+id/imageView_search_trips_location"
                android:layout_toRightOf="@+id/imageView_search_trips_location"
                android:layout_alignBottom="@+id/imageView_search_trips_location"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/editText_search_trips_time"
                android:hint= "@string/search_trips_start_location_time"
                android:layout_marginLeft="@dimen/list_image_width"
                android:layout_toEndOf="@+id/imageView_search_trips_location"
                android:layout_alignTop="@+id/imageView_search_trips_location"
                android:layout_toRightOf="@+id/imageView_search_trips_location"
                android:layout_alignBottom="@+id/imageView_search_trips_location"
                />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card="http://schemas.android.com/apk/res-auto"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/linearLayout_end_location"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_search_trips_end_location"
                android:src="@drawable/ic_compass_64"
                android:layout_below="@+id/divider_search_trips"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                />

            <AutoCompleteTextView
                android:layout_width="231dp"
                android:layout_height="match_parent"
                android:id="@+id/editText_search_trips_end_location"
                android:hint= "@string/search_trips_end_location_hint"
                android:layout_marginLeft="@dimen/list_image_width"
                android:layout_toEndOf="@+id/imageView_search_trips_end_location"
                android:layout_alignTop="@+id/imageView_search_trips_end_location"
                android:layout_toRightOf="@+id/imageView_search_trips_end_location"
                android:layout_alignBottom="@+id/imageView_search_trips_end_location"
                />
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card="http://schemas.android.com/apk/res-auto"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/linearLayout_end_date_time"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_search_trips_end_time"
                android:src="@drawable/ic_time"
                android:layout_below="@+id/divider_search_trips"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/editText_search_trips_end_date"
                android:hint= "@string/search_trips_end_location_date"
                android:layout_marginLeft="@dimen/list_image_width"
                android:layout_toEndOf="@+id/imageView_search_trips_end_time"
                android:layout_alignTop="@+id/imageView_search_trips_end_time"
                android:layout_toRightOf="@+id/imageView_search_trips_end_time"
                android:layout_alignBottom="@+id/imageView_search_trips_end_time"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/editText_search_trips_end_time"
                android:hint= "@string/search_trips_end_location_time"
                android:layout_marginLeft="@dimen/list_image_width"
                android:layout_toEndOf="@+id/imageView_search_trips_location"
                android:layout_alignTop="@+id/imageView_search_trips_location"
                android:layout_toRightOf="@+id/imageView_search_trips_location"
                android:layout_alignBottom="@+id/imageView_search_trips_location"
                />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card="http://schemas.android.com/apk/res-auto"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_search_trips_circle_open"
                android:src="@drawable/ic_private"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <Spinner
                android:layout_width="164dp"
                android:layout_height="45dp"
                android:id="@+id/spinner_search_trips_circles_open"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                />


        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_search"
            android:fontFamily="@string/font_family"
            android:id="@+id/button_search_trips"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/imageView_search_trips_open"
            android:layout_alignRight="@+id/spinner_search_trips_open"
            android:layout_alignEnd="@+id/spinner_search_trips_open"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_show_search_options"
            android:fontFamily="@string/font_family"
            android:id="@+id/button_show_search_trips_options"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/imageView_search_trips_open"
            android:layout_alignRight="@+id/spinner_search_trips_circles_open"
            android:layout_alignEnd="@+id/spinner_search_trips_circles_open"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView style="@style/ListHeaderLabel"
            android:text="@string/search_trips_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/textView_search_trips_results" />

        <View android:id="@+id/second_search_trips_divider"
            style="@style/ListHeaderDividerLabel"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView_no_result_text"
            android:text="@string/no_result_text"
            android:visibility="gone"/>


        <!-- You can customize this layout.
    You need to have in your layout a `CardView` with the ID `list_cardId` -->
        <it.gmariotti.cardslib.library.view.CardListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/card_search_trips_list"
            card:list_card_layout_resourceID="@layout/list_card_layout"/>

    </LinearLayout>


</FrameLayout>
